# Explore_Qt

./: .gitignore  LICENSE  README.md
01_Hello_QT/: CMakeLists.txt  kcbutton.cpp  kcbutton.h  kcwidget.cpp  kcwidget.h  main.cpp
02_QT_Single_Slot/: CMakeLists.txt  kcwidget.cpp  kcwidget.h  main.cpp  student.cpp  student.h  teacher.cpp  teacher.h
03_QT_QMainWindow/: CMakeLists.txt  mainwindow.cpp
04_QT_Resource/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui  resource.qrc
05_QT_Dialog/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
06_QT_Layout/: CMakeLists.txt  widget.cpp  widget.ui
07_QT_Control/: CMakeLists.txt  res.qrc  widget.cpp  widget.ui
08_QT_SmallWidget/: CMakeLists.txt  smallwidget.cpp  smallwidget.h  smallwidget.ui  widget.cpp  widget.ui
09_QT_Event/: CMakeLists.txt  kclabel.cpp  kclabel.h  widget.cpp  widget.h  widget.ui
10_QT_Painter/: CMakeLists.txt  widget.cpp  widget.h
11_QT_QFile/: CMakeLists.txt  widget.cpp  widget.ui
Demo_CoinFlip/: CMakeLists.txt  chooselevelscene.cpp  chooselevelscene.h  dataconfig.cpp  dataconfig.h  kcbutton.cpp  kcbutton.h  kccoin.cpp  kccoin.h  main.cpp  mainscene.cpp  mainscene.h  mainscene.ui  playscene.cpp  playscene.h
